Fixed avatars on small screens

--- a/templates/sass/userpage.scss
+++ b/templates/sass/userpage.scss
@@ -30,6 +30,7 @@ div.character
 		img
 		{
 			border-radius: 5px;
+			width: 100%;
 			max-width: $avatar_width;
 			max-height: $avatar_height;
 		}
